tests/result/fail/types/function-error.fail.cpp
#include "tim/result/Result.hpp"


int main() { tim::Result<int, int(int)> r; }
